--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-drag-drop-files": "^2.3.5",
+    "react-dropzone": "^12.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
