--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "next": "12.1.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-drag-drop-files": "^2.3.5",
-    "react-dropzone": "^12.0.5"
+    "react-dropzone": "^12.0.5",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
